@@ -1,21 +1,27 @@
 package com.exampl.traveler.controller;
 
 import com.exampl.traveler.service.PackageService;
+import com.exampl.traveler.vo.TicketVO;
 import com.exampl.traveler.vo.UserOrderVO;
 import com.exampl.traveler.vo.PackageVO;
 import jakarta.servlet.http.HttpSession;
+import lombok.Data;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.ResponseEntity;
-import org.springframework.http.HttpStatus;
 import org.springframework.stereotype.Controller;
 import org.springframework.ui.Model;
 import org.springframework.web.bind.annotation.*;
 
-import java.util.Collections;
+import java.util.Date;
 import java.util.List;
+import java.util.Map;
 
 @Controller
 public class PackageController {
+
+    private static final Logger log = LoggerFactory.getLogger(PackageController.class);
 
     @Autowired
     private PackageService packageService;
@@ -34,27 +40,54 @@ public class PackageController {
         return "package/packageDetail";
     }
 
-    @PostMapping("/packages/{id}/order")
+
+
+    @PostMapping("/packages/{packageNO}/order")
     @ResponseBody
-    public ResponseEntity<?> orderPackage(@PathVariable("id") String id,
-                                          @RequestParam("peopleCount") int peopleCount,
-                                          HttpSession session) {
+    public ResponseEntity<?> createOrder(@PathVariable("packageNO") String packageNO,
+                                         @RequestBody Map<String, Object> requestData,
+                                         HttpSession session) {
         String userId = (String) session.getAttribute("id");
         if (userId == null) {
-            return ResponseEntity.status(HttpStatus.UNAUTHORIZED)
-                    .body(Collections.singletonMap("error", "로그인이 필요합니다."));
+            return ResponseEntity.ok().body(Map.of("loggedIn", false));
         }
 
+        int peopleCount = Integer.parseInt(requestData.get("peopleCount").toString());
+
         try {
-            UserOrderVO order = packageService.createOrder(id, peopleCount, userId);
-            return ResponseEntity.ok(Collections.singletonMap("orderId", order.getOrderId()));
-        } catch (RuntimeException e) {
-            return ResponseEntity.status(HttpStatus.NOT_FOUND)
-                    .body(Collections.singletonMap("error", e.getMessage()));
+            PackageVO packages = packageService.getPackageById(packageNO);
+            if (packages == null) {
+                return ResponseEntity.badRequest().body(Map.of("error", "Package not found"));
+            }
+            Date useDate = packages.getStartDateTime();
+
+            
+            //오더
+            Integer orderId = packageService.createOrder(userId, packageNO, peopleCount, useDate);
+            if (orderId == null) {
+                return ResponseEntity.badRequest().body(Map.of("error", "Failed to create order"));
+            }
+
+
+            Date backDate = packages.getEndDateTime();
+
+            // 다이어리
+            packageService.createDiary(userId, orderId, useDate, backDate ,packages.getPackageTitle());
+
+            return ResponseEntity.ok().body(Map.of(
+                    "loggedIn", true,
+                    "ordered", true,
+                    "diaryCreated", true,
+                    "orderId", orderId
+            ));
         } catch (Exception e) {
-            e.printStackTrace();
-            return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR)
-                    .body(Collections.singletonMap("error", "주문 처리 중 오류가 발생했습니다: " + e.getMessage()));
+
+            return ResponseEntity.badRequest().body(Map.of(
+                    "loggedIn", true,
+                    "ordered", false,
+                    "diaryCreated", false,
+                    "error", e.getMessage()
+            ));
         }
     }
 }
